@@ -3,38 +3,6 @@
 %module(package="openturns", docstring="Internal data types.") typ
 //%feature("autodoc","1");
 
-%pythoncode %{
-def getCorrelationMatrixFromMap(Vars, Map):
-    """
-    Convert dictionary to CorrelationMatrix.
-
-    Transform a two-dimension dict whose keys are listed in Vars into a CorrelationMatrix.
-    The values are numerical.
-    No need to define all the elements in the map since CorrelationMatrix is symmetric.
-    
-    Examples
-    --------
-      Vars=['X','Y','Z']
-      Map={}
-      Map['X']={}
-      Map['X']['Y']= 0.1
-      Map['X']['Z']= 0.7
-      Map['Y']={}
-      Map['Y']['Z']= 0.8
-      R = getCorrelationMatrixFromMap(Vars,Map)
-    """
-    corr = CorrelationMatrix(len(Vars))
-    i = 0
-    for first in Vars:
-        j = 0
-        for second in Vars:
-            if first in Map and second in Map[first]:
-                corr[i, j] = Map[first][second]
-            j += 1
-        i += 1
-    return corr
-%}
-
 %{
 #include "openturns/OTconfig.hxx"
 #include "openturns/OTCommon.hxx"
