@@ -6,6 +6,4 @@ matrix1* 3.0 = [[ 3 0 ]
  [ 0 3 ]]
 matrix1/ 3.0 = [[ 0.333333 0        ]
  [ 0        0.333333 ]]
-[[ 1   0.1 0.7 ]
- [ 0.1 1   0.8 ]
- [ 0.7 0.8 1   ]]
+ok
