@@ -1,33 +1,27 @@
 #! /usr/bin/env python
 
 from __future__ import print_function
-from openturns import *
+import openturns as ot
 
-TESTPREAMBLE()
+ot.TESTPREAMBLE()
 
-try:
-    matrix1 = CorrelationMatrix(2)
-    matrix1.setName("matrix1")
-    print("matrix1 = ", repr(matrix1))
+matrix1 = ot.CorrelationMatrix(2)
+matrix1.setName("matrix1")
+print("matrix1 = ", repr(matrix1))
 
-    p = Point((1., 3.))
-    print("matrix1*", p, "=", matrix1 * p)
+p = ot.Point((1., 3.))
+print("matrix1*", p, "=", matrix1 * p)
 
-    s = 3.
-    print("matrix1*", s, "=", matrix1 * s)
-    print(s, "*matrix1=", s * matrix1)
-    print("matrix1/", s, "=", matrix1 / s)
+s = 3.
+print("matrix1*", s, "=", matrix1 * s)
+print(s, "*matrix1=", s * matrix1)
+print("matrix1/", s, "=", matrix1 / s)
 
-    Vars = ['X', 'Y', 'Z']
-    Map = {}
-    Map['X'] = {}
-    Map['X']['Y'] = 0.1
-    Map['X']['Z'] = 0.7
-    Map['Y'] = {}
-    Map['Y']['Z'] = 0.8
-    matrix2 = getCorrelationMatrixFromMap(Vars, Map)
-    print(matrix2)
-
-except:
-    import traceback
-    traceback.print_exc()
+# from SymmetricMatrix
+sym = ot.SymmetricMatrix(3)
+sym[0, 0] = 1.0e-02
+sym[1, 1] = 1.0e-02
+sym[2, 2] = 1.0e-02
+sym[0, 1] = 7.0e-04
+ot.CorrelationMatrix(sym)
+print("ok")
