@@ -8,3 +8,4 @@ isSPD= true
 matrix2=class=TriangularMatrix dimension=2 implementation=class=MatrixImplementation name=Unnamed rows=2 columns=2 values=[1,0.5,0,0.866025]
 result2=class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=2 columns=3 values=[6.66667,-3.33333,12.6667,-5.33333,18.6667,-7.33333]
 ok
+ok
